--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/express": "^5.0.2"
+  }
 }
